--- a/iTrainee.MVC/Areas/Shared/Views/SubTopics/AddEditSubTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/SubTopics/AddEditSubTopic.cshtml
@@ -1,86 +1,93 @@
 ﻿@model iTrainee.Models.SubTopics
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-<h4>Sub Topics</h4>
-<hr />
 <div class="row">
-    <div class="col-lg-12">
-        <form id="subTopicForm" method="post">
-            @Html.AntiForgeryToken()
-            <div class="form-group">
-                <label class="col-form-label">Streams</label><br />
-                @if (ViewBag.StreamList != null)
-                {
-                    @Html.DropDownListFor(model => model.StreamId, ViewBag.StreamList as SelectList, "Select stream", htmlAttributes: new {@class = "form-control"  })
-                }
-            </div>
-            <div class="form-group">
-                <label class="col-form-label">Topics</label><br />
-                @Html.DropDownListFor(model => model.TopicId, ViewBag.TopicsList as SelectList, "Select Topics",  htmlAttributes: new {@class = "form-control"  })
-            </div>
-            <div class="form-group">
-                <div class="form-group">
-                    <label class="col-form-label">Name</label>
-                    <input type="text" class="form-control" name="Name" value="@Model.Name" />
-                </div>
-            </div>
+    <div class="col-lg-12">
+        @using (Html.BeginForm())
+{
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label class="col-form-label">Streams</label><br />
+                @if (ViewBag.StreamList != null)
+                {
+                    @Html.DropDownListFor(model => model.StreamId, ViewBag.StreamList as SelectList, "Select stream", htmlAttributes: new {@class = "form-control"  })
+                    @Html.ValidationMessageFor(model => model.StreamId, "", new { @class = "text-danger" })
+                }
+            </div>
 
-            <div class="form-group">
-                <div class="form-group">
-                    <label class="col-form-label">Reference URL</label>
-                    <input type="text" class="form-control" name="ReferenceURL" value="@Model.ReferenceURL" />
-                </div>
-            </div>
-            <div class="form-group mt-4 float-right">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <input id="btnSubTopicSave" type="submit" value="Save" class="btn btn-primary mr-3" />
-            </div>
-        </form>
-    </div>
+            <div class="form-group">
+                <label class="col-form-label">Topics</label><br />
+                @Html.DropDownListFor(model => model.TopicId, ViewBag.TopicsList as SelectList, "Select Topics",  htmlAttributes: new {@class = "form-control"  })
+            </div>
+      
+            <div class="form-group">
+                <div class="form-group">
+                    <label class="col-form-label">Name</label>
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="form-group">
+                    <label class="col-form-label">Reference URL</label>
+                    @Html.EditorFor(model => model.ReferenceURL, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                    @Html.ValidationMessageFor(model => model.ReferenceURL, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group mt-4 float-right">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <input  type="submit" value="Save" class="btn btn-primary mr-3" />
+            </div>
+     }
+    </div>
 </div>
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-    
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $("#btnSubTopicSave").click(function() {
-                var updatedSubTopicData = $("#subTopicForm").serialize();
-                $.ajax({
-                    type: "POST",
-                    url: "/Shared/SubTopics/AddEditSubTopic",
-                    data: updatedSubTopicData,
-                    success: function() {
-                        $("#subTopicModal").modal("hide");
-                        window.location.replace("/Mentor/Home/ManageSubTopics")
-                    },
-                    error: function() {
-                        alert("Unable to save data");
-                    },
-                });
-            });
-        });
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
+    <script>
+        //$(document).ready(function() {
+        //    $("#btnSubTopicSave").click(function() {
+        //        var updatedSubTopicData = $("#subTopicForm").serialize();
+        //        $.ajax({
+        //            type: "POST",
+        //            url: "/Shared/SubTopics/AddEditSubTopic",
+        //            data: updatedSubTopicData,
+        //            success: function() {
+        //                $("#subTopicModal").modal("hide");
+        //                window.location.replace("/Mentor/Home/ManageSubTopics")
+        //            },
+        //            error: function() {
+        //                alert("Unable to save data");
+        //            },
+        //        });
+        //    });
+        //});
 
-        $(document).ready(function() {
-            $("#StreamId").change(function() {
-                $.ajax({
-                    url: "/Shared/SubTopics/GetTopicList?streamId=" + $("#StreamId").val(),
-                    type: "GET",
-                    dataType: "json",
-                    success: function(data) {
-                        $("#TopicId").empty();
-                        if (data) {
-                            for (var i = 0; i < data.data.length; i++) {
-                                $("#TopicId").append($("<option value='" + data.data[i].id + "'>" + data.data[i].name + "</option>"));
-                            }
-                        }
-                    },
-                    error: function(data) {
-                        alert("Unable to load data");
-                    },
-                });
-            });
-        });
-    </script>
-  }
+        $(document).ready(function() {
+
+            $("#StreamId").change(function() {
+                debugger
+                $.ajax({
+                    url: "/Shared/SubTopics/GetTopicList?streamId=" + $("#StreamId").val(),
+                    type: "GET",
+                    dataType: "json",
+                    success: function(data) {
+                        $("#TopicId").empty();
+                        if (data) {
+                            for (var i = 0; i < data.data.length; i++) {
+                                $("#TopicId").append($("<option value='" + data.data[i].id + "'>" + data.data[i].name + "</option>"));
+                            }
+                        }
+                    },
+                    error: function(data) {
+                        alert("Unable to load data");
+                    },
+                });
+            });
+        });
+    </script>
