--- a/iTrainee.MVC/Areas/Shared/Views/Messages/AddEditMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/AddEditMessages.cshtml
@@ -18,9 +18,11 @@
             htmlAttributes: new { id="multiSelectTrainee", @class = "form-control", multiple="multiple" })
         </div>
 
-        <div class="form-group">
-            <label class="col-form-label">Message</label><br />
-            <input type="text" class="form-control w-25" name="Message" value="@Model.Message" />
+        <div class="col-form-outline">
+            <textarea class="form-control" id="messageArea" name="Message" value="@Model.Message" rows="4"></textarea>
+            <label class="col-form-label" for="messageArea">Message</label>
+            @*<label class="col-form-label">Message</label><br />
+                <input type="text" class="form-control w-25" name="Message" value="@Model.Message" />*@
         </div>
 
         <input type="submit" class="mt-3 btn btn-primary" value="Send" />
