--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -73,11 +73,10 @@
                        id = item.Id
                    }, FormMethod.Post))
                     {
-                        <button class="btn shadow-none" type="submit" onclick="return confirm('Are you sure want to delete this message @item.Message?')">
+                        <button class="btn shadow-none" type="submit" onclick="return confirm('Are you sure want to delete this message \'@item.Message\'?')">
                             <i class="fa fa-trash delete-icon"></i>
                         </button>
                     }
-                    @*<a href="/Shared/Messages/DeleteMessage?Id=@item.Id"><i class="fa fa-trash delete-icon"></i></a>*@
                 </td>
                 <td class="text-center actions-column">
                     <a href="#" onclick="ViewAlertDetails(@item.Id)"><i class="fa fa-eye view-icon"></i></a>
