--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -30,19 +30,20 @@
                     <li class="nav-item px-3 signInSignOut">
                         <span>Date: @DateTime.Now.ToShortDateString()</span>
                     </li>
-                      <li class="nav-item px-3 signInSignOut">
-                            <span>Sign-In : @Model.SignIn.ToShortTimeString()</span>
-                        </li>
-                        <li class="nav-item px-3 signInSignOut">
-                            <span>Sign-Out : @Model.SignOut.ToShortTimeString()</span>
-                        </li>
+                    @*<li class="nav-item px-3 signInSignOut">
+                        <span>Sign-In : @Model.SignIn.ToShortTimeString()</span>
+                    </li>
+                    <li class="nav-item px-3 signInSignOut">
+                        <span>Sign-Out : @Model.SignOut.ToShortTimeString()</span>
+                    </li>*@
                 }
                 <li class="nav-item  px-2">
                     <i class="header-notification fa-lg fa fa-bell-o"></i>
-                    @if((int)@TempData["UnreadMessagesCount"] > 0) {
+                    @if ((int)@TempData["UnreadMessagesCount"] > 0)
+                    {
                         <span class="counter counter-lg">@TempData["UnreadMessagesCount"]</span>
                     }
-                    
+
                 </li>
                 <li class="nav-item dropdown px-2">
                     <a class="text-dark nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -50,8 +51,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Profile</a>
-                      
-	                   <a href="/Home/ChangePassword?userId=@TempData["UserId"]" class="dropdown-item"> Change Password</a>
+
+                        <a href="/Home/ChangePassword?userId=@TempData["UserId"]" class="dropdown-item"> Change Password</a>
 
                         <a class="dropdown-item" href="/Home/Login">Sign Out</a>
                     </div>
@@ -119,7 +120,7 @@
                             <a class="nav-link text-white" href="/Shared/UserTopics/ManageUserTopics">Assign Topics</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Alert Trainee</a>
+                            <a class="nav-link text-white" href="/Shared/Messages/ManageMessages">Alert Trainee</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Trainee&userId=@TempData["UserId"]">Trainee Progress</a>
@@ -130,7 +131,9 @@
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="#">Daily Progress</a>
                         </li>
-                       
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-white" href="/Shared/Messages/ManageTraineeMessages">Alerts</a>
+                        </li>
                     }
                 </ul>
             </div>
@@ -152,9 +155,9 @@
 
 
 <script type="text/javascript">
-  
+
     function ChangePassword() {
-        
+
         var UserPath = "/Home/ChangePassword";
         $("#changePasswordBody").load(UserPath, function () {
             $("#changePassword").modal("show");
@@ -167,5 +170,5 @@
             $("#myModal1").modal("show");
         });
     };
-    
+
 </script>
