--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -3,7 +3,9 @@
 <link rel="stylesheet" href="/css/user.css">
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
+@{
+	TempData.Keep("UserToken");
+}
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "myForm" }))
 {
 	@Html.AntiForgeryToken()
