--- a/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
@@ -14,6 +14,7 @@
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             <div class="form-group mt-4 float-right">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <input type="submit" value="Save" class="btn btn-primary mr-3" />
             </div>
 }
