--- a/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Topics/AddEditTopic.cshtml
@@ -29,6 +29,7 @@
 				</div>
 			</div>
 			<div class="form-group mt-4 float-right">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				<input type="submit" value="Save" class="btn btn-primary mr-3" />
 			</div>
 }
