--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http;
+
+@{
     TempData.Keep("UserId");
     TempData.Keep("UserFirstName");
     TempData.Keep("FirstName");
@@ -52,8 +54,10 @@
                         <a class="dropdown-item" href="#">Profile</a>
                       
 	                   <a href="/Home/ChangePassword?userId=@TempData["UserId"]" class="dropdown-item"> Change Password</a>
-                          <a class="dropdown-item" href="/Home/Login">Sign Out</a>
-                        </div>
+                    
+                         @* <a class="dropdown-item" href="/Home/LogOut">Sign Out</a>*@
+                         <a asp-controller="Home" asp-action="logout">Logout</a>
+                      </div>
                 </li>
             </ul>
         </div>
@@ -139,6 +143,8 @@
         </div>
     </nav>
 </header>
+
+Welcome @Context.Session.GetString("username")
 
 <div class="modal" fade" id="changePassword">
     <div class="modal-dialog modal-lg">
