--- a/iTrainee.MVC/Areas/Shared/Views/Messages/AddEditMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/AddEditMessages.cshtml
@@ -19,10 +19,8 @@
         </div>
 
         <div class="col-form-outline">
-            <textarea class="form-control" id="messageArea" name="Message" value="@Model.Message" rows="4"></textarea>
             <label class="col-form-label" for="messageArea">Message</label>
-            @*<label class="col-form-label">Message</label><br />
-                <input type="text" class="form-control w-25" name="Message" value="@Model.Message" />*@
+            <textarea class="form-control" id="messageArea" name="Message">@Model.Message</textarea>
         </div>
 
         <input type="submit" class="mt-3 btn btn-primary" value="Send" />
