--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ViewAlertDetails.cshtml
@@ -22,22 +22,17 @@
         width: 100px;
     }
 
-    .send-message-bar {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        border-bottom-right-radius: 0.3rem;
-        border-bottom-left-radius: 0.3rem;
+    .send-bar {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 50%;
+        background-color: red;
+        color: white;
+        text-align: center;
     }
-
-    .chat2 {
-        min-height: 385px;
-        height: 385px;
-        overflow-y: auto;
-    }
-
 </style>
-<div class="container chat2">
+<div class="container">
     <div id="chat2">
         @foreach (var item in Model)
         {
@@ -63,9 +58,5 @@
             }
         }
     </div>
-</div>
-<div class="send-message-bar">
-    <textarea type="text" placeholder="Send Message" class="form-control send-message"></textarea>
-    <span class="fa fa-paper-plane send-icon"></span>
 </div>
 
