--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -43,23 +43,8 @@
         border-top: none !important;
     }
 
-    .send-message {
-        border: none;
-        border-bottom: 1.3px solid blue !important;
-        border-radius: 0px !important;
-    }
-
-        .send-message:focus {
-            border-color: none !important;
-        }
-
-        .send-message:visited {
-            border: none !important;
-        }
-
     .modal-body {
-        padding-top: 0px !important;
-        padding-right: 0px !important;
+        padding: 0px !important;
     }
 </style>
 
